# ai-contract-analyser

./: .env  Dockerfile  Implementation_steps.txt  Makefile  README.md  anomaly_detector.py  app.py  chainlit_app.py  config.py  database.py  docker-compose.yml  document_parser.py  models.py  nginx.conf  processor.py  pyproject.toml  requirements-docker.txt  routes.py  setup-and-run.sh  utils.py
instance/: contract_anomaly.db
static/css/: custom.css
static/js/: main.js
templates/: 404.html  500.html  anomalies.html  document_view.html  documents.html  index.html  layout.html  results.html  upload.html
