[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "custom-chainlit",
    "custom-docx",
    "custom-email-validator",
    "custom-flask",
    "custom-flask-sqlalchemy",
    "custom-gunicorn",
    "custom-psycopg2-binary",
    "custom-pypdf2",
    "custom-python-docx",
    "custom-requests",
    "custom-sqlalchemy",
    "custom-weaviate",
    "custom-weaviate-client",
    "custom-werkzeug",
]
